tests/cases/errors/parse/unexpected_token.hc
//@ error: expected an expression
@ U0 Main() {}
